# Pet-feeding-system

./: .gitignore  README.md
components/bme280/: CHANGELOG.md  CMakeLists.txt  LICENCE  README.md  bme280.c  bme280.h  idf_component.yml
components/ec11/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  knob.c  knob.h
components/i2c_bus/: CMakeLists.txt  Kconfig.projbuild  i2c_bus.c  i2c_bus.h  idf_component.yml
components/wifi_station/: Kconfig.projbuild
project/: CMakeLists.txt  sdkconfig.defaults
project/data/: index.html
project/include/: lv_conf.h
project/main/: CMakeLists.txt  idf_component.yml  main.c
